<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/background"
    android:background="#1E1D1D"
    tools:context=".bmiactivity">


    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/contentlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/todo"
        android:padding="10dp"
        android:src="@drawable/ok">

    </ImageView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/contentlayout"
        android:background="@drawable/cardbackgroung"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/tti_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@color/trans"
            android:text="@string/default_age"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:id="@+id/gender_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tti_display"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/gender"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tti_category_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/gender_display"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="@string/your_tti"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>






    </RelativeLayout>


    <android.widget.Button
        android:id="@+id/recalculate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/contentlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="49dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/raleway"
        android:text="@string/recalculate_your_bmi"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck">

    </android.widget.Button>


</RelativeLayout>