<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1D1D"
    tools:context=".MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerhorizontalline"
        android:layout_centerInParent="true">

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/centerverticalline">

    </RelativeLayout>


  <RelativeLayout
      android:layout_width="150dp"
      android:layout_height="150dp"
      android:layout_toStartOf="@id/centerverticalline"
      android:background="@drawable/cardbackgroung"
      android:layout_above="@id/heightlayout"
      android:layout_marginBottom="35dp"
      android:layout_marginRight="20dp"
      android:layout_marginLeft="20dp"
      android:id="@+id/male">

      <ImageView
          android:id="@+id/male_imview"
          android:layout_width="170dp"
          android:layout_height="170dp"
          android:layout_above="@id/text_male"
          android:layout_centerInParent="true"
          android:layout_marginBottom="20dp"
          android:contentDescription="@string/todo"
          android:src="@drawable/male">

      </ImageView>

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textSize="18sp"
          android:textColor="@color/white"
          android:text="@string/male"
          android:id="@+id/text_male"
          android:textStyle="bold"
          android:fontFamily="@font/raleway"
          android:textAlignment="center"
          android:layout_alignParentBottom="true"
          android:layout_marginBottom="10dp">

      </TextView>


  </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_marginLeft="20dp"
        android:id="@+id/female">

        <ImageView
            android:id="@+id/female_imview"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_above="@id/text_female"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/female">

        </ImageView>

        <TextView
            android:id="@+id/text_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/female_text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>


    <RelativeLayout
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerhorizontalline"
        android:layout_marginBottom="-50dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/cardbackgroung"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:id="@+id/heightlayout">

        <TextView
            android:id="@+id/height_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


        <EditText
            android:id="@+id/current_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:autofillHints=""
            android:inputType="phone"
            android:text="@string/default_height"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold">

        </EditText>


        <TextView
            android:id="@+id/unit_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/current_height"
            android:fontFamily="@font/raleway"
            android:text="@string/height_unit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:progressTint="#FF4C4C"
            android:thumbTint="@color/white"
            android:layout_marginRight="10dp"
            android:id="@+id/height_seekbar">

        </SeekBar>

    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/tti_calc"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/buttonbackground"
        android:fontFamily="@font/raleway"
        android:text="@string/calculate_your_bmi"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck">

    </android.widget.Button>



    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_below="@id/heightlayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/weight">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/weight"
            android:fontFamily="@font/raleway"
            android:id="@+id/weight_textview"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">

        </TextView>


        <EditText
            android:id="@+id/current_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway"
            android:inputType="phone"
            android:minHeight="48dp"
            android:text="@string/default_weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:importantForAutofill="no">

        </EditText>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus"
           >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/dec_weight"
                android:contentDescription="@string/todo">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/inc_weight"

                android:src="@drawable/add"
                android:contentDescription="@string/todo">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_below="@id/heightlayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/Age">



        <TextView

            android:id="@+id/age_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/age"
            android:fontFamily="@font/raleway"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">

        </TextView>

        <EditText
            android:id="@+id/current_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:autoText="false"
            android:autofillHints=""
            android:fontFamily="@font/raleway"
            android:inputType="phone"
            android:minHeight="48dp"
            android:text="@string/default_age"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </EditText>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/dec_age"

                android:contentDescription="@string/todo">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/inc_age"
                android:src="@drawable/add"
                android:contentDescription="@string/todo">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>